tests/src/frontend/syntax/invalid/triple_equal.sk
fun main(): String {
  if (1 === 2 && 3 !== 4)
    "true\n"
  else
    "false\n"
}
